# AVS8086

./: .gitignore  README.md
la1/: .clang-format  .gitignore  CMakeLists.txt  README.md  mainwindow.cpp
la1/la1_cmd/: main_cmd.cpp
la1/la1_gui/: CMakeLists.txt
la1/la1_gui/res/: app_win32.rc
la1/la1_gui/res/d_font/: README.md
la1/la1_gui/src/: main_gui.cpp
la1/la1_gui/src/settings/: settings.cpp  settings.h
la1/la1_gui/src/widget/: codeedit.cpp  codeedit.h  mainwidget.cpp  mainwidget.h  searchedit.cpp  searchedit.h
la1/la1_gui/ui/: mainwidget.ui
la1/la1_pkg/: CMakeLists.txt  README.md
la1/res/: res_win32.qrc
la1/res/d_font/: README.md  Space.sfd
la1/share/: config.ini
la1/src/: main_cmd.cpp  main_gui.cpp
la1/src/settings/: settings.cpp  settings.h
la1/src/widget/: codeedit.cpp  codeedit.h  mainwidget.cpp  mainwidget.h  searchedit.cpp  searchedit.h  texteditwidget.cpp  texteditwidget.h
la1/ui/: mainwidget.ui  texteditwidget.ui
qtproj/AVS8086/: CMakeLists.txt  CMakeLists.txt.hswRUe  main.cpp
qtproj/AVS8086/assembly/ast/: node.cpp  node.h  nodeheader.h
qtproj/AVS8086/assembly/ast/node/: expression_statement.hpp  infix.hpp  integer.hpp  program.hpp  string.hpp
qtproj/AVS8086/assembly/lexer/: lexer.cpp  lexer.h
qtproj/AVS8086/assembly/parser/: expression.cpp  group.cpp  infix.cpp  integer.cpp  parser.cpp  parser.h  program.cpp  statement.cpp
qtproj/AVS8086/assembly/token/: token.cpp  token.h
qtproj/AVS8086/back_end/assembler/: assembler.cpp  assembler.h  codes.cpp  compile_fns.cpp
qtproj/AVS8086/back_end/assembler/compile/: mov.cpp  single.cpp
qtproj/AVS8086/back_end/ast/: expr_headers.h  header.h  json.cpp  node.cpp  node.h  nodes_map.cpp  stmt_headers.h  type_names.cpp  value.cpp  value.h
qtproj/AVS8086/back_end/ast/exprs/: address.h  array.h  assign.h  colon.h  comma.h  dup.h  illegal.h  infix.h  load_x.h  make_x.h  operator.h  register.h  value.h
qtproj/AVS8086/back_end/ast/nodes/: address.hpp  comma.hpp  expression_statement.h  expression_statement.hpp  float.hpp  identifier.h  illegal.h  illegal.hpp  infix.hpp  integer.hpp  mov.hpp  multiple_statement.hpp  nagative.hpp  prefix.hpp  program.h  program.hpp  register.hpp  single.hpp  string.hpp  well.h  well.hpp
qtproj/AVS8086/back_end/ast/stmts/: define.h  expression_statement.h  instruction.h  instruction_extend.h  jmp.h  jmp_address.h  lxx.h  mov.h  multiple.h  program.h  push_pop.h  shift.h  single.h  well.h  xchg.h
qtproj/AVS8086/back_end/json/: json.h
qtproj/AVS8086/back_end/lexer/: lexer.cpp  lexer.h
qtproj/AVS8086/back_end/parser/: parse_fns.cpp  parser.cpp  parser.h  precedences.cpp
qtproj/AVS8086/back_end/parser/parse/: expression.cpp  identifiers.cpp  program.cpp  statement.cpp
qtproj/AVS8086/back_end/parser/parse/expressions/: address.cpp  comma.cpp  float.cpp  group.cpp  illegal.cpp  infix.cpp  integer.cpp  (+6 more)
qtproj/AVS8086/back_end/service/: identifier.cpp  identifier.h  infos.cpp  infos.h  json.cpp  json.h  position.cpp  position.h  rbtset.h
qtproj/AVS8086/back_end/token/: mnemonic.cpp  symbol.cpp  token.cpp  token.h  type_names.cpp
qtproj/AVS8086/back_end/vm/: identifier.cpp  identifier.h  vm.cpp  vm.h  vmdialog.h  vmdialog.ui  vmobject.cpp  vmobject.h
qtproj/AVS8086/back_end_2/assembler/: assembler.h  compile_fns.cpp
qtproj/AVS8086/back_end_2/assembler/compile/: mov.cpp  well.cpp
qtproj/AVS8086/back_end_2/ast/: node.cpp  node.h  type_names.cpp  value.cpp
qtproj/AVS8086/back_end_2/ast/nodes/: colon.hpp  expression_statement.hpp  hlt.hpp  infix.hpp  single.hpp
qtproj/AVS8086/back_end_2/json/: json.cpp
qtproj/AVS8086/back_end_2/lexer/: lexer.h
qtproj/AVS8086/back_end_2/parser/: parser.h
qtproj/AVS8086/back_end_2/token/: symbol.cpp
qtproj/AVS8086/back_end_2/vm/: vm.cpp  vm.h  vmdialog.cpp
qtproj/AVS8086/include/object/: assembler.h
qtproj/AVS8086/include/widget/: texteditwidget.h
qtproj/AVS8086/lzl_asm/type/: infos.h  map.h  position.cpp  position.h
qtproj/AVS8086/res/: res_win32.qrc
qtproj/AVS8086/res/ui_res/file_images/: file_images.qrc
qtproj/AVS8086/res/ui_res/left_images/: left_images.qrc
qtproj/AVS8086/res/ui_res/title_images/: title_images.qrc
qtproj/AVS8086/settings/: settings.cpp  settings.h
qtproj/AVS8086/share/: config.ini  config_ui.ini
qtproj/AVS8086/share/config_ini/: main.ini
qtproj/AVS8086/src/main/: main.cpp
qtproj/AVS8086/src/object/: assembler.cpp
qtproj/AVS8086/src/widget/: texteditwidget.cpp  widget.cpp
qtproj/AVS8086/ui/: texteditwidget.ui
qtproj/AVS8086/widget/: settings.cpp  settings.h  texteditwidget.cpp
qtproj/AVS8086/widget_ui/FramelessWidget/: FramelessWidget.cpp  FramelessWidget.h  FramelessWidget.ui
qtproj/AVS8086/widget_ui/Interaction/: interactionwidget.cpp  interactionwidget.h  interactionwidget.ui
qtproj/AVS8086/widget_ui/appOutput/: outputwidget.cpp  outputwidget.h  outputwidget.ui
qtproj/AVS8086/widget_ui/assem_ui/: mainwindow.ui  titlebar.ui
qtproj/AVS8086/widget_ui/debugwidget/: debugwidget.cpp  debugwidget.h  debugwidget.ui
qtproj/AVS8086/widget_ui/emulator/: emulatorwidget.cpp  emulatorwidget.h  emulatorwidget.ui
qtproj/AVS8086/widget_ui/filewidget/: buildwidget.cpp  buildwidget.h  buildwidget.ui  filetreewidget.cpp  filetreewidget.h  filetreewidget.ui
qtproj/AVS8086/widget_ui/framless/: framelesswidget.cpp  framelesswidget.h
qtproj/AVS8086/widget_ui/highlight/: codeeditor.cpp  codeeditor.h  highlighter.cpp  highlighter.h
qtproj/AVS8086/widget_ui/inter/: interactionwidget.cpp  interactionwidget.h  interactionwidget.ui
qtproj/AVS8086/widget_ui/leftwidget/: leftwidget.cpp  leftwidget.h  leftwidget.ui
qtproj/AVS8086/widget_ui/lineedit/: mylineedit.h
qtproj/AVS8086/widget_ui/mainwidget/: mainwidget.cpp  mainwidget.h  mainwidget.ui  test.cpp  test.h  test.ui
qtproj/AVS8086/widget_ui/newwidget/: newwidget.cpp  newwidget.h  newwidget.ui
qtproj/AVS8086/widget_ui/promptwidget/: promptwidget.cpp  promptwidget.h  promptwidget.ui
qtproj/AVS8086/widget_ui/res/: _res.qrc
qtproj/AVS8086/widget_ui/titlebar/: MyMenu.cpp  MyMenu.h  titlebar.cpp  titlebar.h
(+43 files in other folders)
